2007-04-08  Enrico Tröger  <enrico.troeger@uvena.de>

 * configure.in, Makefile.am, doc/Makefile.am, scintilla/Makefile.am,
   src/Makefile.am, tagmanager/Makefile.am:
   Made "distcheck" working.


2007-04-06  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/sci_cb.c:
   Only insert a space if construct completion occurs, to prevent
   unusual undo history.
 * doc/geany.docbook:
   Add Construct completion in the Editing section.
   Add Tags section, including how to generate a replacement global.tags
   file.


2007-04-05  Nick Treleaven  <nick.treleaven@btinternet.com>

 * tagmanager/tm_workspace.c:
   Write tm_tag_enumerator_t and tm_tag_macro_t (e.g. for GTK_STOCK_*)
   tags when creating a global tags file, and store the pointerOrder.
 * doc/geany.docbook:
   Add filtering out version control files with Extra options info to
   Find in Files section.
 * src/keybindings.c:
   Only construct-complete when the editor widget has focus.
 * src/symbols.c, tagmanager/tm_workspace.c:
   Make \" filename quoting optional when creating a global tags file
   (quoting is useful if glob matching is needed). Run geany -g for
   example usage.


2007-04-03  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/search.c:
   Add recursive option to Find in Files dialog.
 * src/search.c:
   Add 'Extra options' field and checkbox to FIF dialog.
   Don't allow arguments appended to Grep command.
   Prevent warning when using relative paths with open directory button.
   Refactor FIF options code into get_grep_options(), remove
   fif_options, fif_match_type.


2007-03-31  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/templates.c, doc/geany.docbook:
   Make file header optional for filetype templates - use the string
   '{fileheader}' to mark where the file header should be placed, which
   can be anywhere in the filetype template.


2007-03-30  Nick Treleaven  <nick.treleaven@btinternet.com>

 * geany.desktop.in: