@@ -155,6 +155,9 @@ void prefs_init_dialog(void)
 	widget = lookup_widget(app->prefs_dialog, "combo_tab_sidebar");
 	gtk_combo_box_set_active(GTK_COMBO_BOX(widget), app->tab_pos_sidebar);
 
+	widget = lookup_widget(app->prefs_dialog, "check_statusbar_visible");
+	gtk_toggle_button_set_active(GTK_TOGGLE_BUTTON(widget), app->statusbar_visible);
+
 
 	// Toolbar settings
 	widget = lookup_widget(app->prefs_dialog, "check_toolbar_show");
@@ -466,6 +469,9 @@ void on_prefs_button_clicked(GtkDialog *dialog, gint response, gpointer user_dat
 		widget = lookup_widget(app->prefs_dialog, "combo_tab_sidebar");
 		app->tab_pos_sidebar = gtk_combo_box_get_active(GTK_COMBO_BOX(widget));
 
+		widget = lookup_widget(app->prefs_dialog, "check_statusbar_visible");
+		app->statusbar_visible = gtk_toggle_button_get_active(GTK_TOGGLE_BUTTON(widget));
+
 
 		// Toolbar settings
 		widget = lookup_widget(app->prefs_dialog, "check_toolbar_show");
@@ -668,6 +674,14 @@ void on_prefs_button_clicked(GtkDialog *dialog, gint response, gpointer user_dat
 		gtk_toolbar_set_style(GTK_TOOLBAR(app->toolbar), app->toolbar_icon_style);
 		ui_treeviews_show_hide(FALSE);
 		gtk_notebook_set_show_tabs(GTK_NOTEBOOK(app->notebook), app->show_notebook_tabs);
+		// handle statusbar visibility
+		if (app->statusbar_visible)
+		{
+			gtk_widget_show(app->statusbar);
+			ui_update_statusbar(-1, -1);
+		}
+		else
+			gtk_widget_hide(app->statusbar);
 
 		gtk_notebook_set_tab_pos(GTK_NOTEBOOK(app->notebook), app->tab_pos_editor);
 		gtk_notebook_set_tab_pos(GTK_NOTEBOOK(msgwindow.notebook), app->tab_pos_msgwin);
